k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: promotions-service
  # namespace removed
  labels:
    app: promotions
spec:
  type: ClusterIP
  selector:
    app: promotions
  ports:
    - name: http
      port: 80         # Port to access the Service within the cluster
      targetPort: http # Points to the Pod container port 8080 (named "http" in deployment.yaml)
      protocol: TCP
