k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: promotions
  labels:
    app: promotions
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: promotions-service
    weight: 100
